# hako

./: .gitignore  LICENSE  Makefile  README.md  dune.txt  hakm
.github/workflows/: release.yml
cli/: main.c
engine/: .gitignore  CMakeLists.txt  Makefile  README.md
engine/cli/: main.c
engine/src/: bpe.h  hakm_api.c  loader.c  loader.h  mini.c  model.c  model.h  nn.c  nn.h  quant.c  sample.c  sample.h  tokenizer.c  tokenizer.h
engine/tests/: q_ref.py  test_quant.c
include/: mlf2.h
koi/: README.md  pyproject.toml
koi/engine/cli/: main.c
koi/engine/include/: mini.h
koi/engine/src/: kernels_scalar.c  kernels_scalar.h  loader.c  model.c
koi/models/hako-koi-mini-stock/: Modelfile
koi/nano/: export.py  train.py
koi/sft/: Modelfile.tmpl  README.md  RUN.md  prep_dataset.py  qwen2.5-coder-14b-qlora.yaml
sho/models/hako-sho-stock/: Modelfile
src/: bpe.c  hakm_api.h  loader.h  model.c  model.h  nn.c  quant.h  sample.c  sample.h
tests/: test_api.c
tools/: gguf2mlf.py
